--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: '>=3.2.3 <4.0.0'
 
 dependencies:
+  date_picker_timeline: ^1.2.5
   flutter:
     sdk: flutter
   gap: ^3.0.1
@@ -14,6 +15,7 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   image_picker: ^1.0.5
+  intl: ^0.18.1
   lottie: ^2.7.0
 
 dev_dependencies:
